--- a/duplicity-backup/duplicity-backup.conf.example
+++ b/duplicity-backup/duplicity-backup.conf.example
@@ -77,7 +77,7 @@
 #
 ROOT="/var/backup"
 
-# Set hostname for this duplicity instance, usefull for e-mail reports
+# Set hostname for this duplicity instance, useful for e-mail reports
 #
 HOSTNAME=$(hostname -f)
 
@@ -104,6 +104,8 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 #
 #DEST="gs://foobar-backup-bucket/backup-folder/"
 #DEST="ftp://user[:password]@other.host[:port]/some_dir"
+#DEST="ftps://user[:password]@other.host[:port]/some_dir"
+#DEST="ftpes://user[:password]@other.host[:port]/some_dir"
 #DEST="rsync://user@host.com[:port]//absolute_path"
 #DEST="scp://user[:password]@other.host[:port]/[/]some_dir"
 #DEST="ssh://user[:password]@other.host[:port]/[/]some_dir"
@@ -136,6 +138,13 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 #
 #AWS_ACCESS_KEY_ID="foobar_aws_key_id"
 #AWS_SECRET_ACCESS_KEY="foobar_aws_access_key"
+#
+# SET STORAGE CLASS for AWS
+# The default storage class is STANDARD STORAGE. You can comment this option if 
+# want to go with standard. The other storage options are --s3-use-ia and --s3-use-rrs.
+# Note: --s3-use-ia option is supported only in duplicity version greater than 0.7.06 
+#
+#STORAGECLASS="--s3-use-ia"
 #
 # S3CMD INFORMATION
 # Most people don't need this, but in some cases
@@ -181,7 +190,7 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 #
 # Simpler example with one location:
 
-#INCLIST=( "/home/foobar_user_name/Documents/" )
+INCLIST=( "/home/foobar_user_name/Documents/" )
 
 
 # ------------------------------------------------------------------------------
@@ -201,7 +210,7 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 #        )
 # Simpler example with one location. Adapt it to your needs.
 
-#EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
+EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
 
 
 # ------------------------------------------------------------------------------
@@ -292,7 +301,7 @@ GPG_SIGN_KEY="foobar_gpg_key"
 # Amazon S3 in Europe) `--s3-use-new-style` and `--s3-european-buckets` options
 # Be sure to separate your options with appropriate spacing.
 
-STATIC_OPTIONS="--full-if-older-than 14D --s3-use-new-style --allow-source-mismatch"
+STATIC_OPTIONS="--full-if-older-than 14D --s3-use-new-style"
 
 
 # ------------------------------------------------------------------------------
@@ -344,9 +353,9 @@ CLEAN_UP_VARIABLE="4"
 # I run this script as root, but save the log files under my user name --
 # just makes it easier for me to read them and delete them as needed.
 
-LOGDIR="/var/log/duplicity/"
-LOG_FILE="backup.log"
-LOG_FILE_OWNER="root:root"
+-LOGDIR="/var/log/duplicity/"
+-LOG_FILE="backup.log"
+-LOG_FILE_OWNER="root:root"
 
 # Note that if the configured LOGDIR does not exist it will be created
 # and its owner:group set to that of the configured LOG_FILE_OWNER.
@@ -364,14 +373,14 @@ VERBOSITY="-v3"
 # EMAIL ALERT (*thanks: rmarescu*)
 # ------------------------------------------------------------------------------
 #
-# Provide an email address to receive the logfile by email. If no email
-# address is provided, no alert will be sent.
+# Provide an email address to receive the logfile by email. If EMAIL_TO is not
+# provided, no alert will be sent.
 # You can set a custom from email address and a custom subject (both optionally)
 # If no value is provided for the subject, the following value will be
 # used by default: "duplicity-backup Alert ${LOG_FILE}"
 # MTA used: mailx
 
-#EMAIL="admin@example.com"
+#EMAIL_TO="admin@example.com"
 EMAIL_TO=
 EMAIL_FROM=
 EMAIL_SUBJECT=
@@ -383,6 +392,35 @@ MAIL="mailx"     # default command for Linux mail
 #MAIL="ssmtp"
 #MAIL="sendmail"
 #MAIL="msmtp"
+
+# You may specify a custom mail script instead.  It will be called with
+# the following convention:
+# MAIL "SUBJECT OF MESSAGE" "TO EMAIL ADDRESS" "FROM EMAIL ADDRESS"
+# The email body will be available on stdin.
+#
+#MAIL="/path/to/custom/mail_script.py"
+
+
+# ------------------------------------------------------------------------------
+# NOTIFICATIONS
+# ------------------------------------------------------------------------------
+#
+# Third-party notification services. If NOTIFICATION_SERVICE is not provided, no
+# notifications will be sent.
+
+# Possible values for NOTIFICATION_SERVICE are: slack, pushover
+NOTIFICATION_SERVICE=""
+NOTIFICATION_FAILURE_ONLY="yes" # send notifications only if there was an error while creating backup
+
+# Provider: Slack
+SLACK_HOOK_URL="https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
+SLACK_CHANNEL="#general"
+SLACK_USERNAME="duplicity-backup"
+SLACK_EMOJI="package"
+
+# Provider: Pushover
+PUSHOVER_TOKEN="" # App token generated at pushover.net
+PUSHOVER_USER="" # User key from pushover.net
 
 
 # ------------------------------------------------------------------------------
