--- a/duplicity-backup/duplicity-backup.conf
+++ b/duplicity-backup/duplicity-backup.conf
@@ -60,7 +60,7 @@
 #       See the `STATIC_OPTIONS`, `CLEAN_UP_TYPE` and `CLEAN_UP_VARIABLE` parameters in particular.
 #
 #     * Before asking something about duplicity-backup.sh, ensure that your question
-#       isn’t actually concerning duplicity ;)
+#       isn't actually concerning duplicity ;)
 #       First, make sure you can perform a backup with duplicity without using this script.
 #       If you can't make the backup work with duplicity alone, the problem is probably
 #       concerning duplicity and not this script. If you manage to make a backup with duplicity
@@ -95,21 +95,24 @@ HOSTNAME=$(hostname -f)
 # 's3.amazonaws.com' to the appropriate host in your .s3cfg file so that the
 # remote file size check will work.
 
-#DEST="s3://host/backup-bucket/backup-folder/"
-DEST="s3+http://foobar-backup-bucket/backup-folder/"
+#DEST="s3+http://foobar-backup-bucket/backup-folder/"
 
 # Other possible locations
 # Be sure to check duplicity's man page to know how to use them
 # (http://duplicity.nongnu.org/duplicity.1.html)
 #
 #DEST="gs://foobar-backup-bucket/backup-folder/"
+
 #DEST="ftp://user[:password]@other.host[:port]/some_dir"
 #DEST="ftps://user[:password]@other.host[:port]/some_dir"
 #DEST="ftpes://user[:password]@other.host[:port]/some_dir"
+
 #DEST="rsync://user@host.com[:port]//absolute_path"
+
 #DEST="scp://user[:password]@other.host[:port]/[/]some_dir"
 #DEST="ssh://user[:password]@other.host[:port]/[/]some_dir"
 #DEST="sftp://user[:password]@other.host[:port]/[/]some_dir"
+
 #DEST="file:///home/foobar_user_name/new-backup-test/"
 #DEST="imap[s]://user[:password]@host.com[/from_address_prefix]"
 #DEST="webdav[s]://user[:password]@other.host[:port]/some_dir"
@@ -122,7 +125,7 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 # ------------------------------------------------------------------------------
 # Instead of setting the password needed for the backup destination in the
 # DEST url, you can supply it in the FTP_PASSWORD variable below, which is
-# used by most, if not all backends, regardless of it’s name.
+# used by most, if not all backends, regardless of its name.
 # Duplicity's official documentation states:
 #   "Supported by most backends which are password capable. More secure than
 #    setting it in the backend url (which might be readable in the operating
@@ -140,9 +143,9 @@ DEST="s3+http://foobar-backup-bucket/backup-folder/"
 #AWS_SECRET_ACCESS_KEY="foobar_aws_access_key"
 #
 # SET STORAGE CLASS for AWS
-# The default storage class is STANDARD STORAGE. You can comment this option if 
+# The default storage class is STANDARD STORAGE. You can comment this option if
 # want to go with standard. The other storage options are --s3-use-ia and --s3-use-rrs.
-# Note: --s3-use-ia option is supported only in duplicity version greater than 0.7.06 
+# Note: --s3-use-ia option is supported only in duplicity version greater than 0.7.06
 #
 #STORAGECLASS="--s3-use-ia"
 #
@@ -208,6 +211,9 @@ INCLIST=( "/home/foobar_user_name/Documents/" )
 #            "/**Icon?" \
 #            "/**.AppleDouble" \
 #        )
+#
+# If you don't want to exclude anything, use EXCLIST=()
+#
 # Simpler example with one location. Adapt it to your needs.
 
 EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
@@ -335,7 +341,7 @@ CLEAN_UP_VARIABLE="4"
 # (a full backup every 7 days), and you execute duplicity-backup once a day.
 # After six months you'll have 25 full backups, each with daily incrementals
 # in between. Perhaps you're keeping the backups past 1 month "just in case",
-# and so the older incrementals are overkill – weekly full backups beyond
+# and so the older incrementals are overkill - weekly full backups beyond
 # one month backward would suffice. In this case you can set
 # "REMOVE_INCREMENTALS_OLDER_THAN to, say, "4" which will delete the
 # incrementals for backup sets beyond the four most recent, keeping
@@ -353,15 +359,15 @@ CLEAN_UP_VARIABLE="4"
 # I run this script as root, but save the log files under my user name --
 # just makes it easier for me to read them and delete them as needed.
 
--LOGDIR="/var/log/duplicity/"
--LOG_FILE="backup.log"
--LOG_FILE_OWNER="root:root"
+LOGDIR="/var/log/duplicity/"
+LOG_FILE="duplicity-$(date +%Y-%m-%d_%H-%M).txt"
+LOG_FILE_OWNER="root:root"
 
 # Note that if the configured LOGDIR does not exist it will be created
 # and its owner:group set to that of the configured LOG_FILE_OWNER.
 # If the configured LOGDIR already exists no change to owner:group is attempted.
 #
-#REMOVE_LOGS_OLDER_THAN='30' # (days) uncomment to activate
+REMOVE_LOGS_OLDER_THAN='30' # (days) uncomment to activate
 
 VERBOSITY="-v3"
 
@@ -408,7 +414,7 @@ MAIL="mailx"     # default command for Linux mail
 # Third-party notification services. If NOTIFICATION_SERVICE is not provided, no
 # notifications will be sent.
 
-# Possible values for NOTIFICATION_SERVICE are: slack, pushover
+# Possible values for NOTIFICATION_SERVICE are: slack, pushover, ifttt
 NOTIFICATION_SERVICE=""
 NOTIFICATION_FAILURE_ONLY="yes" # send notifications only if there was an error while creating backup
 
@@ -422,6 +428,11 @@ SLACK_EMOJI="package"
 PUSHOVER_TOKEN="" # App token generated at pushover.net
 PUSHOVER_USER="" # User key from pushover.net
 
+# Provider: IFTTT
+IFTTT_KEY="" # Key for MAKER channel at IFTTT
+IFTTT_MAKER_EVENT="duplicity" # name the event to trigger at IFTTT Maker Channel
+IFTTT_HOOK_URL="https://maker.ifttt.com/trigger/$IFTTT_MAKER_EVENT/with/key/$IFTTT_KEY" # ONLY change this if IFTTT changes it
+IFTTT_VALUE2="" # general purpose value to pass to your maker channel (optional)
 
 # ------------------------------------------------------------------------------
 # TROUBLESHOOTING
