--- a/duplicity-backup/duplicity-backup.conf
+++ b/duplicity-backup/duplicity-backup.conf
@@ -193,7 +193,7 @@ HOSTNAME=$(hostname -f)
 #
 # Simpler example with one location:
 
-INCLIST=( "/home/foobar_user_name/Documents/" )
+#INCLIST=( "/home/foobar_user_name/Documents/" )
 
 
 # ------------------------------------------------------------------------------
@@ -216,7 +216,7 @@ INCLIST=( "/home/foobar_user_name/Documents/" )
 #
 # Simpler example with one location. Adapt it to your needs.
 
-EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
+#EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
 
 
 # ------------------------------------------------------------------------------
