--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - :/var/backup
     environment:
+      - HOST_NAME=
       - CRON_SCHEDULE=0 1 * * *
     #  - EXCLUDE=
     #  - NOTIFICATION_SERVICE=
