--- a/duplicity-backup/duplicity-backup.conf
+++ b/duplicity-backup/duplicity-backup.conf
@@ -2,7 +2,7 @@
 #
 # Copyright (c) 2008-2010 Damon Timm.
 # Copyright (c) 2010 Mario Santagiuliana.
-# Copyright (c) 2012-2015 Marc Gallet.
+# Copyright (c) 2012-2016 Marc Gallet.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
@@ -23,10 +23,10 @@
 # http://damontimm.com/code/dt-s3-backup (for the original program by Damon Timm)
 #
 # Latest code available at:
-# http://github.com/zertrin/duplicity-backup
+# http://github.com/zertrin/duplicity-backup.sh
 #
 # List of contributors:
-# https://github.com/zertrin/duplicity-backup/graphs/contributors
+# https://github.com/zertrin/duplicity-backup.sh/graphs/contributors
 #
 # ---------------------------------------------------------------------------- #
 
@@ -294,6 +294,14 @@ GPG_SIGN_KEY="foobar_gpg_key"
 # usually located at ~/.gnupg/secring.gpg
 #
 #SECRET_KEYRING="/home/foobar_user_name/.gnupg/duplicity.gpg
+
+# Here you can specify options that will be passed to GPG.
+# If you can, avoid using quotes here, as it hasn't been tested much yet.
+# You shouldn't need to remove the following default (--no-show-photos)
+# For example an user reported (GitHub issue #145) that since gnupg v2.1,
+# the option "--pinentry-mode loopback" is necessary,
+# then set GPG_OPTIONS="--no-show-photos --pinentry-mode loopback"
+GPG_OPTIONS="--no-show-photos"
 
 
 # ------------------------------------------------------------------------------
