--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -1,32 +1,44 @@
+HOST_NAME=
+CRON_SCHEDULE=
+
 RESTORE_PATH=
 
 EXCLUDE=
+
 NOTIFICATION_SERVICE=
 NOTIFICATION_FAILURE_ONLY=
+
 IFTTT_KEY=
 IFTTT_MAKER_EVENT=
 IFTTT_VALUE2=
+
 SLACK_HOOK_URL=
 SLACK_CHANNEL=
 SLACK_USERNAME=
 SLACK_EMOJI=
+
 EMAIL_TO=
 EMAIL_FROM=
 EMAIL_SUBJECT=
 EMAIL_FAILURE_ONLY=
+
 DEST_S3=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_LOCATION=
+
 DEST_GS=
 GS_ACCESS_KEY_ID=
 GS_SECRET_ACCESS_KEY=
+
 GDOCS=
+
 DEST_SWIFT=
 SWIFT_USERNAME=
 SWIFT_PASSWORD=
 SWIFT_AUTHURL=
 SWIFT_AUTHVERSION=
+
 DEST_FTP=
 DEST_FTPS=
 DEST_FTPES=
