--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ EMAIL_FROM=
 EMAIL_SUBJECT=
 EMAIL_FAILURE_ONLY=
 
+TELEGRAM_CHATID=
+TELEGRAM_KEY=
+
 DEST_S3=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -30,6 +33,9 @@ AWS_LOCATION=
 DEST_GS=
 GS_ACCESS_KEY_ID=
 GS_SECRET_ACCESS_KEY=
+
+DEST_DPBX=
+DPBX_ACCESS_TOKEN=
 
 GDOCS=
 
@@ -40,6 +46,8 @@ SWIFT_AUTHURL=
 SWIFT_AUTHVERSION=
 
 DEST_FTP=
+FTP_PASSWORD=
+
 DEST_FTPS=
 DEST_FTPES=
 DEST_RSYNC=
@@ -49,3 +57,5 @@ DEST_SFTP=
 DEST_FILE=
 DEST_IMAP_S=
 DEST_WEBDAV_S=
+DEST_B2=
+
