--- a/duplicity-backup/duplicity-backup.conf
+++ b/duplicity-backup/duplicity-backup.conf
@@ -2,7 +2,7 @@
 #
 # Copyright (c) 2008-2010 Damon Timm.
 # Copyright (c) 2010 Mario Santagiuliana.
-# Copyright (c) 2012-2016 Marc Gallet.
+# Copyright (c) 2012-2018 Marc Gallet.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
@@ -75,7 +75,7 @@
 # This can be / or somewhere else -- I use /home/ because all the
 # directories that I want to backup start with /home/.
 #
-ROOT="/var/backup"
+ROOT='/var/backup'
 
 # Set hostname for this duplicity instance, useful for e-mail reports
 #
@@ -102,22 +102,19 @@ HOSTNAME=$(hostname -f)
 # (http://duplicity.nongnu.org/duplicity.1.html)
 #
 #DEST="gs://foobar-backup-bucket/backup-folder/"
-
 #DEST="ftp://user[:password]@other.host[:port]/some_dir"
 #DEST="ftps://user[:password]@other.host[:port]/some_dir"
 #DEST="ftpes://user[:password]@other.host[:port]/some_dir"
-
 #DEST="rsync://user@host.com[:port]//absolute_path"
-
 #DEST="scp://user[:password]@other.host[:port]/[/]some_dir"
-#DEST="ssh://user[:password]@other.host[:port]/[/]some_dir"
 #DEST="sftp://user[:password]@other.host[:port]/[/]some_dir"
-
 #DEST="file:///home/foobar_user_name/new-backup-test/"
 #DEST="imap[s]://user[:password]@host.com[/from_address_prefix]"
 #DEST="webdav[s]://user[:password]@other.host[:port]/some_dir"
 #DEST="gdocs://foobar_google_account/some_dir"
 #DEST="swift://foobar_swift_container/some_dir"
+#DEST="dpbx:///foobar_swift_container/some_dir"
+#DEST="b2://some_account_id[:some_application_key]@some_bucket_name/some_dir"
 
 
 # ------------------------------------------------------------------------------
@@ -176,6 +173,13 @@ HOSTNAME=$(hostname -f)
 #SWIFT_AUTHURL="foobar_swift_authurl"
 #SWIFT_AUTHVERSION="2"
 
+# ------------------------------------------------------------------------------
+# DROPBOX INFORMATION
+# ------------------------------------------------------------------------------
+# Uncomment these lines if you're using Dropbox
+#
+#DPBX_ACCESS_TOKEN="foobar_dropbox_access_token"
+
 
 # ------------------------------------------------------------------------------
 # INCLUDE LIST OF DIRECTORIES
@@ -185,15 +189,15 @@ HOSTNAME=$(hostname -f)
 #
 # Here is an example with multiple locations:
 #
-#INCLIST=(  "/home/*/Documents" \
-#           "/home/*/Projects" \
-#           "/home/*/logs" \
-#           "/home/www/mysql-backups" \
+#INCLIST=(  '/home/*/Documents' \
+#           '/home/*/Projects' \
+#           '/home/*/logs' \
+#           '/home/www/mysql-backups' \
 #        )
 #
 # Simpler example with one location:
 
-#INCLIST=( "/home/foobar_user_name/Documents/" )
+INCLIST=( '/home/foobar_user_name/Documents/' )
 
 
 # ------------------------------------------------------------------------------
@@ -205,18 +209,18 @@ HOSTNAME=$(hostname -f)
 #
 # Here is an example with multiple locations:
 #
-#EXCLIST=(   "/home/*/Trash" \
-#            "/home/*/Projects/Completed" \
-#            "/**.DS_Store" \
-#            "/**Icon?" \
-#            "/**.AppleDouble" \
+#EXCLIST=(   '/home/*/Trash' \
+#            '/home/*/Projects/Completed' \
+#            '/**.DS_Store' \
+#            '/**Icon?' \
+#            '/**.AppleDouble' \
 #        )
 #
 # If you don't want to exclude anything, use EXCLIST=()
 #
 # Simpler example with one location. Adapt it to your needs.
 
-#EXCLIST=( "/home/foobar_user_name/Documents/foobar-to-exclude" )
+EXCLIST=( '/home/foobar_user_name/Documents/foobar-to-exclude' )
 
 
 # ------------------------------------------------------------------------------
@@ -263,9 +267,9 @@ ENCRYPTION='no'
 # (your backups will be encrypted with this password) or is used
 # for the "GPG_SIGN_KEY" (see below).
 # Comment out if you aren't using encryption
-# Note: if you have a '$' in your passphrase, escape it with a '\'
+# Note: if you have a ' in your passphrase, escape it accordingly.
 
-PASSPHRASE="foobar_gpg_passphrase"
+PASSPHRASE='foobar_gpg_passphrase'
 
 # Specify which GPG keys you would like to use (even if you have only one).
 # If you are running this from a cron, it is highly recommended to create separate
@@ -301,7 +305,7 @@ GPG_SIGN_KEY="foobar_gpg_key"
 # For example an user reported (GitHub issue #145) that since gnupg v2.1,
 # the option "--pinentry-mode loopback" is necessary,
 # then set GPG_OPTIONS="--no-show-photos --pinentry-mode loopback"
-GPG_OPTIONS="--no-show-photos"
+GPG_OPTIONS="--list-options no-show-photos"
 
 
 # ------------------------------------------------------------------------------
@@ -375,7 +379,7 @@ LOG_FILE_OWNER="root:root"
 # and its owner:group set to that of the configured LOG_FILE_OWNER.
 # If the configured LOGDIR already exists no change to owner:group is attempted.
 #
-REMOVE_LOGS_OLDER_THAN='30' # (days) uncomment to activate
+#REMOVE_LOGS_OLDER_THAN='30' # (days) uncomment to activate
 
 VERBOSITY="-v3"
 
@@ -422,7 +426,7 @@ MAIL="mailx"     # default command for Linux mail
 # Third-party notification services. If NOTIFICATION_SERVICE is not provided, no
 # notifications will be sent.
 
-# Possible values for NOTIFICATION_SERVICE are: slack, pushover, ifttt
+# Possible values for NOTIFICATION_SERVICE are: slack, pushover, ifttt, telegram
 NOTIFICATION_SERVICE=""
 NOTIFICATION_FAILURE_ONLY="yes" # send notifications only if there was an error while creating backup
 
@@ -441,6 +445,10 @@ IFTTT_KEY="" # Key for MAKER channel at IFTTT
 IFTTT_MAKER_EVENT="duplicity" # name the event to trigger at IFTTT Maker Channel
 IFTTT_HOOK_URL="https://maker.ifttt.com/trigger/$IFTTT_MAKER_EVENT/with/key/$IFTTT_KEY" # ONLY change this if IFTTT changes it
 IFTTT_VALUE2="" # general purpose value to pass to your maker channel (optional)
+
+# Provider: Telegram
+TELEGRAM_CHATID="" #Generate a Telegram bot following guide: https://core.telegram.org/bots#3-how-do-i-create-a-bot
+TELEGRAM_KEY=""
 
 # ------------------------------------------------------------------------------
 # TROUBLESHOOTING
